# rigister_dj

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  master.yml
config/: asgi.py  settings.py  urls.py
deploy_config/: gunicorn.conf.py  project.conf.txt
fashion/: admin.py  models.py  serializers.py  urls.py  views.py
fashion/migrations/: 0001_initial.py  0002_sweatshirt_number.py  0003_rename_photos_photo_photo.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified.py
